fixed whitespace error by hardcoding % of header, body and footer

--- a/src/css/General.css
+++ b/src/css/General.css
@@ -55,26 +55,7 @@ header{
         var(--primary-col) 90%
       );
     border-top: 4px solid var(--secondary-col);
-}
-
-footer {
-    background-color: var(--secondary-col);
-    border: solid var(--primary-col);
-    border-width: 0px 4px 0px 4px;
-    border-top: 1px solid var(--trans-grey);
-
-    text-align: right;
-    padding-right: 3%;
-
-    color: var(--primary-col);
-    font-size: small;
-
-    height: 30px;
-}
-
-footer > div {
-    position: relative;
-    top: 3px;
+    height: 100%;
 }
 
 .nested-banner-img {
@@ -110,6 +91,26 @@ footer > div {
     width: 40%;
 }
 
+
+footer {
+    background-color: var(--secondary-col);
+    border: solid var(--primary-col);
+    border-width: 0px 4px 0px 4px;
+    border-top: 1px solid var(--trans-grey);
+
+    text-align: right;
+    padding-right: 3%;
+
+    color: var(--primary-col);
+    font-size: small;
+
+    height: 100%;
+}
+
+footer > div {
+    position: relative;
+    top: 10px;
+}
 
 /* END HEADER SPECS */
 
@@ -182,14 +183,11 @@ footer > div {
 }
 
 .no-flex {
-    flex: 0 !important;
+    flex: 0 0 !important;
 }
 
 .no-internal-flex > * {
-    flex: 0 !important;
-}
-.flex-1 {
-    flex: 1;
+    flex: 0 0 !important;
 }
 
 
